--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -4,11 +4,15 @@ layout: default
 <article class="tutorial">
 
   <header class="tutorial__header">
-    <h1>{{ page.title }}</h1>
-    <img src="/assets/images/arm-logo.png" />
-    <img src="/assets/images/microbit-logo.png" />
+    <span class="tutorial__header__tutorial-type">{{ page.tutorial_type }}</span>
+    <div class="tutorial__header__icons">
+      <img src="/assets/images/arm-logo.png" />
+      <img src="/assets/images/microbit-logo.png" />
+    <div>
   </header>
 
-  {{ content }}
+  <div class="tutorial__content">
+    {{ content }}
+  </div>
 
 </article>
