Basic menu styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,8 @@
 
   <nav class="page-header__site-nav">
     <ul>
-      {% for page in site.pages %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-      {% endfor %}
+      <li><a href="/about">About</a></li>
+      <li><a href="/tutorials">Tutorials</a></li>
     </ul>
   </nav>
 </header>
