--- a/_sass/_tutorial.scss
+++ b/_sass/_tutorial.scss
@@ -26,7 +26,7 @@ article.tutorial {
     	float: left;
     	font-size: inherit;
     	line-height: 1.6em;
-    	margin: 10px;
+    	margin: 10px 10px 10px 20px;
     }
 
     &__icons {
