Non-tutorial content and navigation layout tweaks

--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="tutorial">
+<article class="page-wrapper tutorial">
 
   <header class="tutorial__header">
     <span class="tutorial__header__tutorial-type">{{ page.tutorial_type }}</span>
