--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="page-wrapper post">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
