--- a/_sass/_tutorial.scss
+++ b/_sass/_tutorial.scss
@@ -1,12 +1,10 @@
 article.tutorial {
-  background-color: #fafafa;
   border: 2px solid #F06449;
-  border-radius: 3px;
-  color: #36382E;
   display: flex;
   flex-direction: column;
 	max-width: 840px;
 	margin: .8em auto;
+  padding: 0;
 	-webkit-font-smoothing: subpixel-antialiased;
 	text-rendering: optimizeLegibility;
 
@@ -56,6 +54,6 @@ article.tutorial {
       padding: 15px;
     }
 
-    padding: .5em 2.5em;
+    padding: .5em 2.5em 1em;
   }
 }
