--- a/_sass/_tutorial.scss
+++ b/_sass/_tutorial.scss
@@ -52,6 +52,7 @@ article.tutorial {
       background: #ccc;
       display: none;
       padding: 15px;
+      margin: -1em 0 1.75em;
     }
 
     padding: .5em 2.5em 1em;
