--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,6 +29,14 @@ li {
   margin-bottom: 0.5em;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 figure {
   text-align: center;
 }
