--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -25,6 +25,21 @@
   }
 }
 
+.post-list, .tutorial-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  a {
+    display: block;
+    padding: .2em 0;
+    border-radius: 4px;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
 @media print {
   .page-header {
     display: none;
