--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,6 +24,10 @@ ul {
   margin: 0 0 1.75em;
 }
 
+ul ul, ol ol {
+  margin-top: .6em;
+}
+
 li {
   line-height: 1.4em;
   margin-bottom: 0.5em;
@@ -36,6 +40,8 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+img { max-width: 100%; }
 
 figure {
   text-align: center;
