--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -53,6 +53,10 @@ figcaption {
   margin: .5em 0;
 }
 
+pre.highlight {
+  margin: 0 0 1.75em;
+}
+
 .page-wrapper {
   box-sizing: border-box;
   max-width: 840px;
